...
                                        <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YyB-0I-61x" id="Mh3-JR-DBc">
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Mobile developer #1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="69B-my-IHR">
                                                    <rect key="frame" x="20" y="10" width="154" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <accessibility key="accessibilityConfiguration">
                                                        <bool key="isElement" value="NO"/>
                                                    </accessibility>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="d6G-IX-7TG">
                                <rect key="frame" x="20" y="419" width="374" height="58.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Button not pressed yet!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4AX-WK-5Id">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="infoLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uxg-18-RAz">
                                        <rect key="frame" x="0.0" y="28.5" width="374" height="30"/>
                                        <state key="normal" title="Press me!"/>
                                        <connections>
                                            <action selector="testButtonPressedWithSender:" destination="D8m-2u-zTH" eventType="touchUpInside" id="p54-fE-ycD"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
            <point key="canvasLocation" x="1376.8115942028987" y="231.69642857142856"/>
        </scene>
        <!--Second-->
        <scene sceneID="vdj-kp-mi1">
            <objects>
                <navigationController id="FN5-Ek-s7i" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Second" image="person.circle" catalog="system" id="s8K-TC-N1w"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="cfS-CL-tXU">
                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="dU9-he-4cb" kind="relationship" relationship="rootViewController" id="rrW-9M-Ses"/>
...
